--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title:  Welcome to yc-zzh's Homepage.
-description: This is my Homepage.
+title:  For the First
+description: Welcome to the yc-zzh's homepage.
